// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block math renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <h1
          class=""
        />
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <table
            class="ltx_equation ltx_eqn_table"
          >
            


            <tbody>
              <tr
                class="ltx_equation ltx_eqn_row ltx_align_baseline"
              >
                

                <td
                  class="ltx_eqn_cell ltx_eqn_center_padleft"
                />
                

                <td
                  class="ltx_eqn_cell ltx_align_center"
                >
                  <span
                    class="ltx_DisplayMath"
                    id="p1.m1"
                  >
                    <span
                      class="mjpage mjpage__block"
                    >
                      <span
                        class="mjx-chtml MJXc-display"
                        style="text-align: left;"
                      >
                        <span
                          aria-label=" e^{i\\\\pi}=-1 "
                          class="mjx-math"
                        >
                          <span
                            aria-hidden="true"
                            class="mjx-mrow"
                          >
                            <span
                              class="mjx-msubsup"
                            >
                              <span
                                class="mjx-base"
                              >
                                <span
                                  class="mjx-mi"
                                >
                                  <span
                                    class="mjx-char MJXc-TeX-math-I"
                                    style="padding-top: 0.225em; padding-bottom: 0.298em;"
                                  >
                                    e
                                  </span>
                                </span>
                              </span>
                              <span
                                class="mjx-sup"
                                style="font-size: 70.7%; vertical-align: 0.584em; padding-left: 0px; padding-right: 0.071em;"
                              >
                                <span
                                  class="mjx-texatom"
                                  style=""
                                >
                                  <span
                                    class="mjx-mrow"
                                  >
                                    <span
                                      class="mjx-mi"
                                    >
                                      <span
                                        class="mjx-char MJXc-TeX-math-I"
                                        style="padding-top: 0.446em; padding-bottom: 0.298em;"
                                      >
                                        i
                                      </span>
                                    </span>
                                    <span
                                      class="mjx-mi"
                                    >
                                      <span
                                        class="mjx-char MJXc-TeX-math-I"
                                        style="padding-top: 0.225em; padding-bottom: 0.298em; padding-right: 0.003em;"
                                      >
                                        π
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span
                              class="mjx-mo MJXc-space3"
                            >
                              <span
                                class="mjx-char MJXc-TeX-main-R"
                                style="padding-top: 0.077em; padding-bottom: 0.298em;"
                              >
                                =
                              </span>
                            </span>
                            <span
                              class="mjx-mo MJXc-space3"
                            >
                              <span
                                class="mjx-char MJXc-TeX-main-R"
                                style="padding-top: 0.298em; padding-bottom: 0.446em;"
                              >
                                −
                              </span>
                            </span>
                            <span
                              class="mjx-mn"
                            >
                              <span
                                class="mjx-char MJXc-TeX-main-R"
                                style="padding-top: 0.372em; padding-bottom: 0.372em;"
                              >
                                1
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </td>
                

                <td
                  class="ltx_eqn_cell ltx_eqn_center_padright"
                />
                

                <td
                  class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"
                  rowspan="1"
                >
                  <span
                    class="ltx_tag ltx_tag_equation ltx_align_right"
                  >
                    (\\theequation)
                  </span>
                </td>
                

              </tr>
              

            </tbody>
          </table>
          

          <p
            class="ltx_p"
          >
            Equation 
            <span
              class="ltx_ref ltx_ref_self"
            >
              id1
            </span>
             is some good math.
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`inline math renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <h1
          class=""
        />
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            Ooh look some lovely maths 
            <span
              class="ltx_Math"
              id="p1.m1"
            >
              <span
                class="mjpage"
              >
                <span
                  class="mjx-chtml"
                >
                  <span
                    aria-label="x^{2}+y^{2}=z^{2}"
                    class="mjx-math"
                  >
                    <span
                      aria-hidden="true"
                      class="mjx-mrow"
                    >
                      <span
                        class="mjx-msubsup"
                      >
                        <span
                          class="mjx-base"
                        >
                          <span
                            class="mjx-mi"
                          >
                            <span
                              class="mjx-char MJXc-TeX-math-I"
                              style="padding-top: 0.225em; padding-bottom: 0.298em;"
                            >
                              x
                            </span>
                          </span>
                        </span>
                        <span
                          class="mjx-sup"
                          style="font-size: 70.7%; vertical-align: 0.513em; padding-left: 0px; padding-right: 0.071em;"
                        >
                          <span
                            class="mjx-texatom"
                            style=""
                          >
                            <span
                              class="mjx-mrow"
                            >
                              <span
                                class="mjx-mn"
                              >
                                <span
                                  class="mjx-char MJXc-TeX-main-R"
                                  style="padding-top: 0.372em; padding-bottom: 0.372em;"
                                >
                                  2
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        class="mjx-mo MJXc-space2"
                      >
                        <span
                          class="mjx-char MJXc-TeX-main-R"
                          style="padding-top: 0.298em; padding-bottom: 0.446em;"
                        >
                          +
                        </span>
                      </span>
                      <span
                        class="mjx-msubsup MJXc-space2"
                      >
                        <span
                          class="mjx-base"
                          style="margin-right: -0.006em;"
                        >
                          <span
                            class="mjx-mi"
                          >
                            <span
                              class="mjx-char MJXc-TeX-math-I"
                              style="padding-top: 0.225em; padding-bottom: 0.519em; padding-right: 0.006em;"
                            >
                              y
                            </span>
                          </span>
                        </span>
                        <span
                          class="mjx-sup"
                          style="font-size: 70.7%; vertical-align: 0.513em; padding-left: 0.082em; padding-right: 0.071em;"
                        >
                          <span
                            class="mjx-texatom"
                            style=""
                          >
                            <span
                              class="mjx-mrow"
                            >
                              <span
                                class="mjx-mn"
                              >
                                <span
                                  class="mjx-char MJXc-TeX-main-R"
                                  style="padding-top: 0.372em; padding-bottom: 0.372em;"
                                >
                                  2
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        class="mjx-mo MJXc-space3"
                      >
                        <span
                          class="mjx-char MJXc-TeX-main-R"
                          style="padding-top: 0.077em; padding-bottom: 0.298em;"
                        >
                          =
                        </span>
                      </span>
                      <span
                        class="mjx-msubsup MJXc-space3"
                      >
                        <span
                          class="mjx-base"
                          style="margin-right: -0.003em;"
                        >
                          <span
                            class="mjx-mi"
                          >
                            <span
                              class="mjx-char MJXc-TeX-math-I"
                              style="padding-top: 0.225em; padding-bottom: 0.298em; padding-right: 0.003em;"
                            >
                              z
                            </span>
                          </span>
                        </span>
                        <span
                          class="mjx-sup"
                          style="font-size: 70.7%; vertical-align: 0.513em; padding-left: 0.076em; padding-right: 0.071em;"
                        >
                          <span
                            class="mjx-texatom"
                            style=""
                          >
                            <span
                              class="mjx-mrow"
                            >
                              <span
                                class="mjx-mn"
                              >
                                <span
                                  class="mjx-char MJXc-TeX-main-R"
                                  style="padding-top: 0.372em; padding-bottom: 0.372em;"
                                >
                                  2
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
             oh yeah.
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
